added login page
need to configure backend and fix checkstyle

--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -1,7 +1,7 @@
-@(message: String)
 
-@Main("Welcome to Play 2.1") {
+
+@Main("Home") {
     
-    @play20.welcome(message, style = "Java")
+    
     
 }
