fixed checkstyle, added terms of use page.

--- a/app/views/LogIn.scala.html
+++ b/app/views/LogIn.scala.html
@@ -52,7 +52,7 @@
   
 }
 </div>
-<h100>By creating an account, you agree to the <a href="#">Terms and Conditions</a>.</h100>
+<h100>By creating an account, you agree to the <a href="@routes.Application.terms()">Terms and Conditions</a>.</h100>
         </div>
         </div>
     </div>
