--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -42,8 +42,16 @@
   </div>
   </div>
   @content
+  <div class="container">
+  <hr>
+      <h100><span class="glyphicon glyphicon-copyright-mark"></span> 2014 Hawaii Hoops Network</h100>
+      <a href="@routes.Application.terms()"><h101>Terms & Conitions of Use</h101></a>
+      <a href="#"><h101>Contact</h101></a>
+      <a href="#"><h101>About</h101></a>
+  </div>
   <!-- Load Bootstrap JavaScript components. HTMLUnit (used in testing) requires JQuery 1.8.3 or below). -->
   <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+      
 </body>
 </html>
