added login widget
need to not have password posted to url

--- a/app/views/LogIn.scala.html
+++ b/app/views/LogIn.scala.html
@@ -3,7 +3,7 @@
 @import bootstrap3._ 
 @import helper._ 
 
-@Main("Login / Register") {
+@Main("Login / Register", user) {
 <div class="container">
   <div class="row page-content">
     <div class="col-sm-5 right-well">
