--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -47,3 +47,16 @@ h101 {
   font-size: 10px;
   margin-left: 20px;
 }
+
+.loginWidget {
+  width: 200px;
+}
+
+.form-control2 {
+  margin-top: 10px;
+  width: 150px;
+}
+
+.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
+  background-color: #222222;
+}
