added About and Contact pages

--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -1,6 +1,6 @@
-@(user: Form[views.formdata.LoginForm])
+@(title: String, user: Form[views.formdata.LoginForm])
 
-@Main("Home", user) {
+@Main(title, user) {
     
     
     
