--- a/app/views/TermsOfUse.scala.html
+++ b/app/views/TermsOfUse.scala.html
@@ -1,6 +1,6 @@
-@(user: Form[views.formdata.LoginForm])
+@(title: String, user: Form[views.formdata.LoginForm])
 
-@Main("Terms & Conditions of Use", user) {
+@Main(title, user) {
     
 <div class="container">
 <h2>
