added Player Profile template

--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -1,7 +1,19 @@
 @(title: String, user: Form[views.formdata.LoginForm])
 
 @Main(title, user) {
-    
+ <div class="container">
+  <div class="row">
+    <div class="col-md-3">
+    <div class="well">Gyms open now!</div>
+    </div>
+    <div class="col-md-6">
+        <div class="well">Carousel</div>
+    </div>
+    <div class="col-md-3">
+        <div class="well">Schedule of games</div>
+    </div>
+    </div>
+  </div>
     
     
 }
