--- a/app/views/TermsOfUse.scala.html
+++ b/app/views/TermsOfUse.scala.html
@@ -2,6 +2,7 @@
 
 @Main(title, user) {
     
+    <!-- Terms of Use Page -->
 <div class="container">
 <h2>
     Web Site Terms and Conditions of Use
