--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -4,12 +4,29 @@
 
 <html>
     <head>
-        <title>@title</title>
+        <title>@title - Hawaii Hoops Network</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css">
+
+        <!--  Load site-specific customizations after bootstrap. -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/basketball.jpg")">
     </head>
     <body>
+        <div class="container">
         @content
+        </div>
+     <hr>
+     <div id = "footer">
+      <div class="container">
+        <h100><span class="glyphicon glyphicon-copyright-mark"></span>  2014 Hawaii Hoops Network</h100>
+        <h100><a href="@routes.Application.terms()">Terms Of Use</a></h100>
+        <h100><a href="@routes.Application.contact()">Contact</a></h100>
+        <a href="@routes.Application.about">About Us</a>
+      </div>
+        <!-- Load Bootstrap JavaScript components. HTMLUnit (used in testing) requires JQuery 1.8.3 or below). -->
+        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+      </div>
     </body>
 </html>
