--- a/app/views/footer/ContactUs.scala.html
+++ b/app/views/footer/ContactUs.scala.html
@@ -10,10 +10,14 @@
 
     @form(routes.Application.sendMessage(), 'class -> "form-horizontal") {
     
+        @bootstrap3.text(contactForm("name"),
+              label = "Name",
+              placeholder = "",
+              help = "Please enter your real name")
         @bootstrap3.text(contactForm("email"),
               label = "Email Address",
               placeholder = "example@gmail.com",
-              help = "")
+              help = "For when we need to respond back.")
               
          @bootstrap3.textarea(contactForm("message"),
                                rows = "12",
@@ -23,7 +27,7 @@
         
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button id="submitButton" type="submit" class="btn btn-info">
+                <button id="submitButton" type="submit" class="btn btn-primary">
                 Send Message
                 </button>
             </div>
