--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)
 
 <!DOCTYPE html>
 
@@ -14,7 +14,38 @@
     </head>
     <body>
         <div class="container">
-        @content
+            <div class="navbar navbar-inverse" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                            <!--  Display three horizontal lines when navbar collapsed. -->
+                            <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">HiHoopsNetwork</a>
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <!-- When these pages become available, release
+                            <li><a id="gyms" href="@routes.Application.gyms()">Gyms</a></li>
+                            <li><a id="games" href="@routes.Application.games()">Games</a></li>
+                            <li><a id="leagues" href="@routes.Application.leagues()">Leagues</a></li>
+                            <li><a id="teams" href="@routes.Application.teams()">Teams</a></li>
+                            <li><a id="playerss" href="@routes.Application.gyms()">Players</a></li>
+                            -->
+                            <li><a href="#">Gyms</a></li>
+                            <li><a href="#">Games</a></li>
+                            <li><a href="#">Leagues</a></li>
+                            <li><a href="#">Teams</a></li>
+                            <li><a href="#">Player Profiles</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a data-toggle="modal" href="#login"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- content -->
         </div>
      <hr>
      <div id = "footer">
