--- a/app/views/footer/AboutUs.scala.html
+++ b/app/views/footer/AboutUs.scala.html
@@ -1,4 +1,6 @@
-@(title: String) @Main(title) {
+@(title: String) 
+
+@Main(title) {
 <h2>About Us</h2>
   <p>Created by students at the University of Hawaii for local players.</p>
   
@@ -9,6 +11,4 @@
   <p>Hawaii Hoops Network's mission is to connect all basketball players, teams, and leagues on the island of Oahu!
     Get information on leagues, open gyms, pick up games, and network with players and teams in your area! Register for
     leagues online. #MOVE</p>
-
-
-  }
+}
