--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -25,12 +25,12 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <!-- When these pages become available, release
-                            <li><a id="gyms" href="@routes.Application.gyms()">Gyms</a></li>
-                            <li><a id="games" href="@routes.Application.games()">Games</a></li>
-                            <li><a id="leagues" href="@routes.Application.leagues()">Leagues</a></li>
-                            <li><a id="teams" href="@routes.Application.teams()">Teams</a></li>
-                            <li><a id="playerss" href="@routes.Application.gyms()">Players</a></li>
+                            <!-- When these pages become available, release (be sure to add at symbol)
+                            <li><a id="gyms" href="routes.Application.gyms()">Gyms</a></li>
+                            <li><a id="games" href="routes.Application.games()">Games</a></li>
+                            <li><a id="leagues" href="routes.Application.leagues()">Leagues</a></li>
+                            <li><a id="teams" href="routes.Application.teams()">Teams</a></li>
+                            <li><a id="players" href="routes.Application.gyms()">Players</a></li>
                             -->
                             <li><a href="#">Gyms</a></li>
                             <li><a href="#">Games</a></li>
