--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -11,6 +11,12 @@
         <!--  Load site-specific customizations after bootstrap. -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/basketball.jpg")">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="date.created" content="2014-02-05">
+        <meta name="generator" content="HTML Calendar Maker 2.0">
+        <meta name="licensekey" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <body>
         <div class="container">
@@ -47,6 +53,7 @@
                 </div>
             </div>
             <!-- content -->
+            @content
         </div>
      <hr>
      <div id = "footer">
