--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-            <!-- content -->
+            @content
         </div>
      <hr>
      <div id = "footer">
