removed unnecessary annotation in User and Court models

--- a/app/views/footer/ContactUs.scala.html
+++ b/app/views/footer/ContactUs.scala.html
@@ -1,4 +1,4 @@
-@(title: String, contactForm: Form[views.formdata.ContactUsForm])
+@(title: String, contactForm: Form[forms.ContactUsForm])
 
 @import helper._
 @import bootstrap3._
