--- a/app/views/games/AllGames.scala.html
+++ b/app/views/games/AllGames.scala.html
@@ -3,7 +3,7 @@
 
 
 @Main(title) {
-    
+    <a href="@routes.Games.createGame()" class="btn btn-primary btn-md active" role="button">Create a Game</a>
     <table class="table table-striped table-hover">
       <thead>
          <tr>
@@ -11,7 +11,7 @@
             <th>Time</th>
             <th>Location</th>
             <th>Type</th>
-            <th class="hidden-xs">Frequency</th>
+            <!-- <th class="hidden-xs">Frequency</th> -->
             <th class="hidden-xs">Skill Level</th>
             <th class="hidden-xs">Number of Players</th>
          </tr>
@@ -19,11 +19,11 @@
       <tbody data-link="row" class="rowlink">
         @for(game <- games) {
          <tr>
-            <td><a id="noColor" href="@routes.Games.getGame(game.getId())">@game.getDate()</a></td>
+            <td><a id="noColor" href="@routes.Games.getGame(game.getName())">@game.getDate()</a></td>
             <td>@game.getTime()</td>
             <td>@game.getLocation()</td>
             <td>@game.getType()</td>
-            <td class="hidden-xs">Frequencey</td>
+           <!--  <td class="hidden-xs">@game.getFrequency()</td> -->
             <td class="hidden-xs">@game.getAvgSklLvl()</td>
             <td class="hidden-xs">@game.getListPlayers().size()</td>
          </tr>
