--- a/app/views/teams/AllTeams.scala.html
+++ b/app/views/teams/AllTeams.scala.html
@@ -1,7 +1,31 @@
-@(title: String)
+@(title: String, teams: List[models.teams.Team])
 
 @Main(title) {
     
-    <a href="@routes.Teams.createTeam()">Create Team</a>
+    <a href="@routes.Teams.createTeam()" class="btn btn-primary btn-md active" role="button">Create a Team</a>
+    <table class="table table-striped table-hover">
+      <thead>
+         <tr>
+            <th>Name</th>
+            <th>Location</th>
+            <th>Type</th>
+            <th>Roster Size</th>
+            <th class="hidden-xs">Skill Level</th>
+            <th class="hidden-xs">Days</th>
+         </tr>
+      </thead>
+      <tbody data-link="row" class="rowlink">
+        @for(team <- teams) {
+         <tr>
+            <td><a id="noColor" href="@routes.Teams.getTeam(team.getTeamName())">@team.getTeamName()</a></td>
+            <td>@team.getLocation()</td>
+            <td>@team.getGender()</td>
+            <td>@team.getListPlayers().size()</td>
+            <td class="hidden-xs">@team.getSklLvl()</td>
+            <td class="hidden-xs">@team.getDays()</td>
+         </tr>
+        }
+      </tbody>
+   </table>
     
 }
