--- a/app/views/player/PlayerList.scala.html
+++ b/app/views/player/PlayerList.scala.html
@@ -1,6 +1,7 @@
-@(title: String, players: List[Player])
+@(title: String, players: List[Player], searchForm: Form[views.formdata.SearchFormData])
 
 @import helper._
+@import bootstrap3._
 
 @Main(title) {
     <div class="container">
@@ -8,6 +9,25 @@
     <div class="well">
 
     <div class="row-search hidden-xs">
+    
+        <div class="col-md-4">
+        @form(routes.Players.playersWithName(), 'class -> "form-horizontal"){
+          <div class="input-group">
+            @simpleText(searchForm("name"),
+                  placeholder="Name",
+                  label="",
+                  help="")
+            <span class="input-group-btn">
+              <div class="form-group">
+                <button id="submitButton" type="submit" class="btn btn-primary">Search</button>
+              </div>
+            </span>  
+            
+          </div>
+          <!-- /input-group -->
+        }
+        </div>
+        <!-- /.col-lg-6 -->
 
         <div class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
@@ -38,21 +58,9 @@
             </ul>
         </div>
 
-        <div class="col-md-4">
-          <div class="input-group">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="button">
-                <a href="@routes.Players.playersWithName("Alex G.")">Search</a>
-              </button>
-            </span> <input type="text" class="form-control">
-          </div>
-          <!-- /input-group -->
-        </div>
-        <!-- /.col-lg-6 -->
-
-
+        
+        
       <a href="players/shayne.html" class="btn btn-primary pull-right active" role="button">Your Profile</a>
-
 
     </div>
 
