--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, scripts: Html = Html(""))(content: Html)
 
 <!DOCTYPE html>
 
@@ -11,6 +11,7 @@
         <!--  Load site-specific customizations after bootstrap. -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/basketball.jpg")">
+        @scripts
     </head>
     <body>
         <div class="container">
@@ -26,7 +27,7 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             
-                            <li><a href="#">Gyms</a></li>
+                            <li><a id="courts" href="@routes.Courts.index()">Gyms</a></li>
                             <li><a href="#">Games</a></li>
                             <li><a href="#">Leagues</a></li>
                             <li><a href="#">Teams</a></li>
