Pagination Finished! close #60

--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -37,7 +37,7 @@
                             <li><a id="leagues" href="routes.Application.leagues()">Leagues</a></li>
                             <li><a id="teams" href="routes.Application.teams()">Teams</a></li>-->
                             
-                            <li><a id="players" href="@routes.Players.players()">PlayerList</a></li>
+                            <li><a id="players" href="@routes.Players.players("name asc", 1)">PlayerList</a></li>
                             
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
