--- a/app/views/player/PlayerList.scala.html
+++ b/app/views/player/PlayerList.scala.html
@@ -1,4 +1,5 @@
-@(currentPage: com.avaje.ebean.Page[Player], title: String, searchForm: Form[views.formdata.SearchFormData])
+@(currentPage: com.avaje.ebean.Page[Player], title: String, searchForm: Form[views.formdata.SearchFormData],
+  field: String, searchWord: String)
 
 @import helper._
 @import bootstrap3._
@@ -9,9 +10,9 @@
     <div class="well">
 
     <div class="row-search hidden-xs">
-    
+        
         <div class="col-md-4">
-        @form(routes.Players.playersWithName(), 'class -> "form-horizontal"){
+        @form(routes.Players.playerNameSearch(), 'class -> "form-horizontal"){
           <div class="input-group">
             @simpleText(searchForm("name"),
                   placeholder="Name",
@@ -34,12 +35,12 @@
                 Skill Level<span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="@routes.Players.playersSkill("Beginner")">Beginner</a></li>
-                <li><a href="@routes.Players.playersSkill("Intermediate")">Intermediate</a></li>
-                <li><a href="@routes.Players.playersSkill("Competitive")">Competitive</a></li>
-                <li><a href="@routes.Players.playersSkill("College")">College</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "Beginner", "name asc", 1)">Beginner</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "Intermediate", "name asc", 1)">Intermediate</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "Competitive", "name asc", 1)">Competitive</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "College", "name asc", 1)">College</a></li>
                 <li class="divider"></li>
-                <li><a href="@routes.Players.players(currentPage.getPageIndex)">All</a></li>
+                <li><a href="@routes.Players.players("name asc", 1)">All</a></li>
             </ul>
         </div>
 
@@ -48,54 +49,50 @@
                 Position<span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="@routes.Players.playersPosition("Point Gaurd")">Point Gaurd</a></li>
-                <li><a href="@routes.Players.playersPosition("Shooting Gaurd")">Shooting Gaurd</a></li>
-                <li><a href="@routes.Players.playersPosition("Center")">Center</a></li>
-                <li><a href="@routes.Players.playersPosition("Power Forward")">Power Forward</a></li>
-                <li><a href="@routes.Players.playersPosition("Small Forward")">Small Forward</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Point Gaurd", "name asc", 1)">Point Gaurd</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Shooting Gaurd", "name asc", 1)">Shooting Gaurd</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Center", "name asc", 1)">Center</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Power Forward", "name asc", 1)">Power Forward</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Small Forward", "name asc", 1)">Small Forward</a></li>
                 <li class="divider"></li>
-                <li><a href="@routes.Players.players(currentPage.getPageIndex)">All</a></li>
+                <li><a href="@routes.Players.players("name asc", 1)">All</a></li>
             </ul>
         </div>
 
-        
-        
-      <a href="players/shayne.html" class="btn btn-primary pull-right active" role="button">Your Profile</a>
+        <a href="players/shayne.html" class="btn btn-primary pull-right active" role="button">Your Profile</a>
 
     </div>
 
     <div class="row-search visible-xs">
 
         <div class="btn-group">
-            <button type="button" class="btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                 Skill Level<span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="@routes.Players.playersSkill("Beginner")">Beginner</a></li>
-                <li><a href="@routes.Players.playersSkill("Intermediate")">Intermediate</a></li>
-                <li><a href="@routes.Players.playersSkill("Competitive")">Competitive</a></li>
-                <li><a href="@routes.Players.playersSkill("College")">College</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "Beginner", "name asc", 1)">Beginner</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "Intermediate", "name asc", 1)">Intermediate</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "Competitive", "name asc", 1)">Competitive</a></li>
+                <li><a href="@routes.Players.playerSearch("skill", "College", "name asc", 1)">College</a></li>
                 <li class="divider"></li>
-                <li><a href="@routes.Players.players(currentPage.getPageIndex)">All</a></li>
+                <li><a href="@routes.Players.players("name asc", 1)">All</a></li>
             </ul>
         </div>
 
         <div class="btn-group">
-            <button type="button" class="btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                 Position<span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
-                <li><a href="@routes.Players.playersPosition("Point Gaurd")">Point Gaurd</a></li>
-                <li><a href="@routes.Players.playersPosition("Shooting Gaurd")">Shooting Gaurd</a></li>
-                <li><a href="@routes.Players.playersPosition("Center")">Center</a></li>
-                <li><a href="@routes.Players.playersPosition("Power Forward")">Power Forward</a></li>
-                <li><a href="@routes.Players.playersPosition("Small Forward")">Small Forward</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Point Gaurd", "name asc", 1)">Point Gaurd</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Shooting Gaurd", "name asc", 1)">Shooting Gaurd</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Center", "name asc", 1)">Center</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Power Forward", "name asc", 1)">Power Forward</a></li>
+                <li><a href="@routes.Players.playerSearch("position", "Small Forward", "name asc", 1)">Small Forward</a></li>
                 <li class="divider"></li>
-                <li><a href="@routes.Players.players(currentPage.getPageIndex)">All</a></li>
+                <li><a href="@routes.Players.players("name asc", 1)">All</a></li>
             </ul>
         </div>
-
-        <a href="#" class="btn btn-primary btn-sm active" role="button">Search</a>
 
         <a href="players/shayne.html" class="btn btn-primary pull-right active" role="button">Your Profile</a>
 
@@ -105,12 +102,21 @@
     <table class="table table-striped table-hover">
     
         <thead>
+        @if(field == "none") {
         <tr>
-            <th><a id="playersSortByName" href="@routes.Players.sortAllPlayersByName()">Name</a></th>
-            <th><a id="playersSortByName" href="@routes.Players.sortAllPlayersByCourt()">Court</a></th>
-            <th><a id="playersSortByName" href="@routes.Players.sortAllPlayersBySkill()">Skill Level</a></th>
-            <th><a id="playersSortByName" href="@routes.Players.sortAllPlayersByPosition()">Position</a></th>
+            <th><a id="playersSortByName" href="@routes.Players.players("name asc", currentPage.getPageIndex)">Name</a></th>
+            <th><a id="playersSortByName" href="@routes.Players.players("homeCourt asc", currentPage.getPageIndex)">Court</a></th>
+            <th><a id="playersSortByName" href="@routes.Players.players("skill asc", currentPage.getPageIndex)">Skill Level</a></th>
+            <th><a id="playersSortByName" href="@routes.Players.players("position asc", currentPage.getPageIndex)">Position</a></th>
         </tr>
+        } else {
+        <tr>
+            <th><a id="playersSortByName" href="@routes.Players.playerSearch(field, searchWord, "name asc", currentPage.getPageIndex)">Name</a></th>
+            <th><a id="playersSortByName" href="@routes.Players.playerSearch(field, searchWord, "homeCourt asc", currentPage.getPageIndex)">Court</a></th>
+            <th><a id="playersSortByName" href="@routes.Players.playerSearch(field, searchWord, "skill asc", currentPage.getPageIndex)">Skill Level</a></th>
+            <th><a id="playersSortByName" href="@routes.Players.playerSearch(field, searchWord, "position asc", currentPage.getPageIndex)">Position</a></th>
+        </tr>
+        }
         </thead>
         
         <tbody data-link="row" class="rowlink">
@@ -123,32 +129,41 @@
             </tr>
         }
         </tbody>
+        
+    </table>
+    
         <div id="pagination" class="pagination">
-          <ul>
+          <ul class="pagination">
             @if(currentPage.hasPrev) {
                 <li class="prev">
-                <a href="@routes.Players.players(currentPage.getPageIndex-1)">&larr;</a>
+                <a href="@routes.Players.players("name asc", currentPage.getPageIndex-1)">&laquo;</a>
                 </li>
             } else {
                 <li class="prev disabled">
-                <a>&larr;</a>
+                    <a>&laquo;</a>
                 </li>
-            } 
-            <li class = "current">
-                <a>@currentPage.getDisplayXtoYofZ(" - ", " / ")</a>
-            </li>
+            }
+            @for(index <- 1 until currentPage.getTotalPageCount()) {
+                <li class="current">
+                @if(field == "none") {
+                  <a href="@routes.Players.players("name asc", index)">@index</a>
+                } else {
+                  <a href="@routes.Players.playerSearch(field, searchWord, "name asc", index)">@index</a>
+                }
+                </li>
+            }
             @if(currentPage.hasNext) {
                 <li class="next">
-                  <a href="@routes.Players.players(currentPage.getPageIndex+1)">&rarr;</a>
+                  <a href="@routes.Players.players("name asc", currentPage.getPageIndex+1)">&raquo;</a>
                 </li>
             } else {
                 <li class="next disabled">
-                    <a> &rarr;</a>
+                    <a> &raquo;</a>
                 </li>
             }
           </ul>
         </div>
-    </table>
+    
     </div>
 </div>
 }
