--- a/app/views/player/PlayerList.scala.html
+++ b/app/views/player/PlayerList.scala.html
@@ -59,7 +59,7 @@
             </ul>
         </div>
 
-        <a href="players/shayne.html" class="btn btn-primary pull-right active" role="button">Your Profile</a>
+        <a href="@routes.Players.playerManage()" class="btn btn-primary pull-right active" role="button">Your Profile</a>
 
     </div>
 
